# BFMachines

./: .gitignore  README.md  check_shell_script.sh  sonar-project.properties
.github/workflows/: build_ubuntu_latest.yml  build_ubuntu_latest_g++10.yml  check_shell_scripts.yml  cmake.yml  cpp_address_sanitizer.yml  cpp_build_macos.yml  cpp_build_macos_latest.yml  cpp_build_ubuntu.yml  cpp_build_ubuntu_latest.yml  cpp_build_windows.yml  cpp_build_windows_latest.yml  cpp_check_include_guards.yml  cpp_cmakelint.yml  cpp_memory_sanitizer.yml  cpp_static_analysis.yml  generate_reports.yaml  md_link_check.yml  sonar_cloud_check.yml  static_analysis.yml  yaml_check.yml
cpp/: .clang-tidy  CMakeLists.txt  README.md
cpp/BFMachineLib/: BFMachineLib.hpp
cpp/BFMachineLib/BFMDataRef/: BFMDataRef.hpp
cpp/BFMachineLib/BFMachine/: BFMState.hpp  BFMachine.hpp
cpp/BFMachineLib/BFOperations/: BFOperations.hpp  BFOperationsMainIncl.hpp  BFOperationsUtilFunctions.hpp
cpp/BFMachineLib/BFOperations/translators/: AllTranslators.hpp  ToBf.hpp  ToCpp.hpp  TranslatorsUtilFunctions.hpp
cpp/BFMachineLib/BFParser/: BFCodeToOperationSeq.hpp  BFParser.hpp  DataChange.hpp
cpp/BFMachineLib/BFParser/inner/: BfOperationDataChangeRelated.hpp  RawParserRelated.hpp
cpp/BFMachineLib/FindMatching/: FindMatching.hpp
cpp/BFMachineLib/MemoryTypes/: ArrayMemory.hpp  ChangeValueFunctions.hpp  MapMemory.hpp  MemoryTypes.hpp  VectorMemory.hpp  VectorMemory.hpp.save-failed
cpp/BFMachineLib/StandardInstructions/: StandardInstructions.hpp
cpp/BFMachineLib/Streams/: InputStream.hpp  InputVectorStream.hpp  OutputArrayStream.hpp  OutputVectorStream.hpp  Streams.hpp
cpp/cmake/: CodeCoverage.cmake  CompilerWarnings.cmake  Sanitizers.cmake  StaticAnalyzers.cmake
cpp/examples/: CMakeLists.txt
cpp/examples/bf_to_cpp/: CMakeLists.txt  bf_to_cpp.cbp  bf_to_cpp.cpp
cpp/examples/bf_to_cpp_generate_and_run/: CMakeLists.txt  README.md  bf_to_cpp_generate.cbp  bf_to_cpp_generate.cpp  bf_to_cpp_run.cbp  bf_to_cpp_run.cpp
cpp/examples/compile_time_arithmetic/: CMakeLists.txt  compile_time_arithmetic.cbp  compile_time_arithmetic.cpp
cpp/examples/execute_optimized/: CMakeLists.txt  execute_optimized.cbp  execute_optimized.cpp
cpp/examples/memory_types_performance_comparison/: CMakeLists.txt  memory_types_performance_comparison.cbp  memory_types_performance_comparison.cpp
cpp/examples/simple_bf_debugger/: CMakeLists.txt  simple_bf_debugger.cbp  simple_bf_debugger.cpp
cpp/examples/simple_bf_interpreter/: CMakeLists.txt  simple_bf_interpreter.cbp  simple_bf_interpreter.cpp
cpp/examples/simplify_bf_code/: CMakeLists.txt  simplify_bf_code.cbp  simplify_bf_code.cpp
cpp/scripts/: empty_dir.sh  generate_raw_coverage_data.sh  generate_raw_coverage_data_clangxx.sh  generate_raw_coverage_data_gxx.sh  get_all_cpp_build_data_path.sh  get_clangxx_coverage_data_path.sh  get_cpp_coverage_report_path.sh  get_cpp_source_path.sh  get_gxx_coverage_data_path.sh  get_proj_root.sh  run_gcovr_html.sh  run_gcovr_sonarqube.sh  run_lcov_and_genhtml.sh  run_llvm-cov.sh
cpp/tests/: BfTestCodes.hpp  CMakeLists.txt  TestBFMachine.hpp  TestMemoryTypes.hpp  TestTranslateToBf.hpp  UsedTestTypes.hpp  UtilFunctions.hpp  all_tests.cpp  tests.cbp
cpp/tests/tests/: CppCheckResults.xml  TestBFMachine.hpp  TestMemoryTypes.hpp  all_tests.cpp  tests.cbp
matlab/: README.md  add_examples.m  run_all_tests.m  run_all_tests_par.m
matlab/+BFMachinePac/: get_standard_bf_instruction_set.m
matlab/+BFMachinePac/+MemoryTypes/: change_value.m  extend_by_appending_needed.m  extend_by_doubling.m
matlab/+BFMachinePac/+MemoryTypes/@MapMemory/: MapMemory.m
matlab/+BFMachinePac/+MemoryTypes/@VectorMemory/: VectorMemory.m
matlab/+BFMachinePac/@BFMachine/: BFMachine.m
matlab/+BFMachinePac/@CyclicUnsignedValue/: CyclicUnsignedValue.m
matlab/+BFMachinePac/@FindMatching/: FindMatching.m
matlab/+BFMachinePac/@IOStream/: IOStream.m
matlab/+BFMachinePac/@InputStream/: InputStream.m
matlab/+BFMachinePac/@OutputStream/: OutputStream.m
matlab/+tests/: BFMachineTest.m  ExamplesTest.m  MemoryTypesTest.m  StaticAnalysisTest.m
matlab/examples/: add_bf.m  hello_world_bf.m
matlab/examples/call_cpp_bf/: cpp_bf.cpp  run_cpp_bf.m
matlab/tests/: BFMachineTest.m  FindMatchingTest.m  MemoryTypesTest.m
