MACRO(SUBDIRLIST result curdir)
    FILE(GLOB children RELATIVE ${curdir} ${curdir}/*)
    SET(dirlist "")
    FOREACH(child ${children})
        IF(IS_DIRECTORY ${curdir}/${child})
            LIST(APPEND dirlist ${child})
        ENDIF()
    ENDFOREACH()
    SET(${result} ${dirlist})
ENDMACRO()

SUBDIRLIST(ALL_EXAMPLES ${CMAKE_CURRENT_SOURCE_DIR})

FOREACH(subdir ${ALL_EXAMPLES})
    ADD_SUBDIRECTORY(${subdir})
ENDFOREACH()
